# VocalMind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: CICD.yaml
docs/: api-key-auth.md  architecture.md
infra/alembic/: alembic.ini
migrations/: env.py
migrations/versions/: 18354ecf92ac_initial_migration.py  4a36008c16c5_added_hashed_password_column_to_app_.py
scripts/: generate_api_key.sh  run_api_with_workers.sh  run_migrations.sh  run_workers.sh
services/analytics-service/: config.py  main.py
services/api-gateway/app/: config.py  main.py  schemas.py
services/asr-service/app/: config.py  main.py
services/audio-service/app/: config.py  main.py
services/auth_service/: config.py
services/auth_service/app/: api_keys.py  jwt.py  password_security.py
services/language-service/app/: config.py  main.py
services/nlp-service/app/: config.py  main.py
services/persistence-service/app/: config.py  main.py
services/translation-service/app/: config.py  main.py
services/urgency-service/app/: config.py  main.py
shared/common/config/: settings.py
shared/common/messaging/: connection.py  consumer.py  exchange.py  message.py  publisher.py
shared/constants/: __init__.py  events.py  queues.py  status.py
shared/database/: __init__.py  session.py
shared/database/models/: __init__.py  (+5 more)
shared/schemas/: audio.py  common.py  grievance.py  nlp.py
shared/utils/: config.py  id_generator.py  logger.py  tracing.py
task/: 5may.md
tests/: test_pipeline.py
(+23 files in other folders)
